deploy Flask web app

--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -481,6 +481,34 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "STORE CLASSES"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "with open('class_names.txt', 'w') as file_handler:\n",
+    "    for item in class_names:\n",
+    "        file_handler.write(\"{}\\n\".format(item))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
